<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="createChannelViewModel"
            type="neptun.jxy1vz.hp_cluedo.ui.fragment.channel.create.CreateChannelViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/createChannelRoot"
        android:background="@drawable/hogwarts_blur">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLabelChannelName"
            android:text="@string/channel_name"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtChannelName"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLabelChannelName"/>

        <FrameLayout
            android:id="@+id/numPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtChannelName"/>

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/ivLoading"
            android:src="@drawable/timeturner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numPicker"
            app:layout_constraintBottom_toTopOf="@id/btnCreateChannel"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.5"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvWaitForPlayers"
            android:text="@string/wait_for_other_players"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/ivLoading"
            app:layout_constraintEnd_toEndOf="@id/ivLoading"
            app:layout_constraintTop_toTopOf="@id/ivLoading"
            app:layout_constraintBottom_toBottomOf="@id/ivLoading"
            android:visibility="gone"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCreateChannel"
            android:text="@string/create"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:onClick="@{()->createChannelViewModel.createChannel()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineMiddle"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>