<resources>
    <string name="app_name">Cluedo</string>
    <string name="game_start">Játék indítása</string>
    <string name="rules">Szabályok</string>
    <string name="exit">Kilépés</string>
    <string name="map_description">The map of the game</string>
    <string name="star1">Star1</string>
    <string name="star2">Star2</string>
    <string name="star3">Star3</string>
    <string name="star4">Star4</string>
    <string name="star5">Star5</string>
    <string name="star6">Star6</string>
    <string name="star7">Star7</string>
    <string name="star8">Star8</string>
    <string name="player1">Ginny Weasley</string>
    <string name="player2">Harry Potter</string>
    <string name="player3">Hermione Granger</string>
    <string name="player4">Ron Weasley</string>
    <string name="player5">Luna Lovegood</string>
    <string name="player6">Neville Longbottom</string>
    <string name="logo_description">Logo of the game</string>
    <string name="settings_icon">Settings icon</string>
    <string name="dob">Dobás</string>
    <string name="choose_a_character">Válassz karaktert magadnak!</string>
    <string name="dobj">Dobj a kockákkal!</string>
    <string name="dialog_character_title">Válaszd ki a karaktered</string>
    <string name="got_helper_card">Mentõ kártyát kaptál</string>
    <string name="sotet_jegy">A sötét jegy feltûnt az égen!</string>
    <string name="ok">OK</string>
    <string name="helper_cards_tools">Eszközeid</string>
    <string name="helper_cards_spells">Varázsigéid</string>
    <string name="helper_cards_allys">Szövetségeseid</string>
    <string name="hp_loss">Házpontokat vesztettél!</string>
    <string name="hp_loss_amount">Veszített mennyiség:</string>
    <string name="tool_loss">El kell dobnod egy eszköz kártyát!</string>
    <string name="spell_loss">El kell dobnod egy varázsige kártyát!</string>
    <string name="ally_loss">El kell dobnod egy szövetséges kártyát!</string>
    <string name="throw_card">Eldobás</string>
    <string name="your_card_helped_you">A mentõ kártyád segítségedre volt a sötét erõkkel szemben.</string>
    <string name="remaining_hp">Megmaradt házpontjaid:</string>
    <string name="mystery_cards">Rejtélykártyák sorsolása</string>
    <string name="your_mystery_cards">A te rejtély kártyáid:</string>
    <string name="go_forward">Tovább</string>
    <string name="game_mode">Válaszd ki a játék paramétereit!</string>
    <string name="player_mode">Játékos mód:</string>
    <string name="player_count">Játékosok száma:</string>

    <string-array name="characters">
        <item>Ginny Weasley</item>
        <item>Harry Potter</item>
        <item>Hermione Granger</item>
        <item>Ron Weasley</item>
        <item>Luna Lovegood</item>
        <item>Neville Longbottom</item>
    </string-array>

    <string-array name="playmodes">
        <item>Egyjátékos mód</item>
        <item>Többjátékos mód</item>
    </string-array>
</resources>
